<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_movies"
            android:icon="@drawable/ic_menu_movies"
            android:title="@string/menu_movies" />
        <item
            android:id="@+id/nav_tvshows"
            android:icon="@drawable/ic_menu_tvshows"
            android:title="@string/menu_tvshows" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/menu_about" />
    </group>

    <item android:title="@string/setting">
        <menu>
            <item
                android:id="@+id/nav_change_language"
                android:icon="@drawable/ic_menu_language"
                android:title="@string/change_language" />
        </menu>
    </item>

</menu>
